--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -3,13 +3,23 @@ server:
 
 spring:
   application:
-    name: cloud-payment-service
+    name: nacos-payment-provider
   datasource:
     url: jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=Hongkong&characterEncoding=utf-8&autoReconnect=true
     username: root
     password: 123456
     druid:
       driver-class-name: com.mysql.cj.jdbc.Driver
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848 # 配置nacos地址
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
 
 mybatis:
   mapperLocations: classpath:mapper/*.xml
