--- a/cloud-provider-payment8001/src/main/resources/application.yml
+++ b/cloud-provider-payment8001/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848 # 配置nacos地址
+        namespace: d990d0b1-cec0-4267-8b91-fa3fd851affa
 
 management:
   endpoints:
