--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>cloud-provider-payment8001</module>
         <module>cloud-consumer-order80</module>
         <module>cloud-provider-payment8002</module>
+        <module>cloud-config-nacos-client3377</module>
     </modules>
     <packaging>pom</packaging>
 
