--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -8,3 +8,4 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848 # 配置nacos地址
+        namespace: d990d0b1-cec0-4267-8b91-fa3fd851affa
