--- a/cloud-provider-payment8002/src/main/resources/application.yml
+++ b/cloud-provider-payment8002/src/main/resources/application.yml
@@ -4,10 +4,17 @@ server:
 spring:
   application:
     name: nacos-payment-provider
+  datasource:
+    url: jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=Hongkong&characterEncoding=utf-8&autoReconnect=true
+    username: root
+    password: 123456
+    druid:
+      driver-class-name: com.mysql.cj.jdbc.Driver
   cloud:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848 # 配置nacos地址
+        namespace: d990d0b1-cec0-4267-8b91-fa3fd851affa
 
 management:
   endpoints:
