--- a/cloud-consumer-order80/src/main/resources/application.yml
+++ b/cloud-consumer-order80/src/main/resources/application.yml
@@ -19,3 +19,7 @@ logging:
   level:
     # feign日志以什么级别监控哪个接口
     com.huolieniao.service.PaymentFeignService: debug
+
+feign:
+  hystrix:
+    enabled: true
