--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>cloud-consumer-order80</module>
         <module>cloud-provider-payment8002</module>
         <module>cloud-config-nacos-client3377</module>
+        <module>cloud-gateway-gateway9527</module>
     </modules>
     <packaging>pom</packaging>
 
