sentinel first commit 建立工程 引入sentinel依赖 配置上sentinel监控台 首次调用testA则控制台上就有信息了

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>cloud-provider-payment8002</module>
         <module>cloud-config-nacos-client3377</module>
         <module>cloud-gateway-gateway9527</module>
+        <module>cloudalibaba-sentinel-service8401</module>
     </modules>
     <packaging>pom</packaging>
 
